Add jvm opts to allow for internal classes to be accessed for online derivations for when using java9+